[tool.poetry]
name = "de-project-1"
version = "0.1.0"
description = ""
authors = ["Patrick Chu (HKHS Remote) <61301232+patrickchu555@users.noreply.github.com>"]
readme = "README.md"
packages = [{include = "de_project_1"}]

[tool.poetry.dependencies]
python = ">=3.10, <3.12"
numpy = "^1.23.2"
pandas = "^1.4.4"
black = "^22.8.0"
pytest = "^7.1.3"
requests = "^2.28.1"
apache-airflow = "^2.3.4"
scipy = "^1.9.1"
jupyter = "^1.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
